--- a/estacionamento/Views/Shared/_Layout.cshtml
+++ b/estacionamento/Views/Shared/_Layout.cshtml
@@ -22,6 +22,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Clientes" asp-action="Index">Clientes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Vaga" asp-action="Index">Vagas</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ValorDoMinuto" asp-action="Index">Valores</a>
                         </li>
                     </ul>
